--- a/src/main/resources/templates/entity.java.vm
+++ b/src/main/resources/templates/entity.java.vm
@@ -67,9 +67,9 @@ public class ${entity} implements Serializable {
 #if(${field.keyFlag})
 ## 主键
 #if(${field.keyIdentityFlag})
-	##@TableId(value="${field.name}", type= IdType.AUTO)
+	@TableId(value="${field.name}", type= IdType.AUTO)
 #elseif(${field.convert})
- ##   @TableId("${field.name}")
+    @TableId("${field.name}")
 #end
 ## 普通字段
 #elseif(${field.fill})
